# benchlens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml
benchlens/: __init__.py  main.py
benchlens/alerts/: __init__.py  base_sink.py  console_sink.py  file_sink.py  manager.py
benchlens/api/: __init__.py  app.py  auth.py  deps.py  schemas.py
benchlens/ingestion/: __init__.py  base_connector.py  csv_connector.py  factory.py  json_connector.py  rest_connector.py  sql_connector.py
benchlens/load/: __init__.py  dim_resolver.py  etl_logger.py  warehouse_writer.py
benchlens/orchestration/: __init__.py  pipeline_runner.py
benchlens/quality/: __init__.py  dq_runner.py  regression.py  rules.py  validators.py
benchlens/reports/: __init__.py  view_manager.py
benchlens/scheduler/: __init__.py  runner.py
benchlens/transform/: __init__.py  canonical.py  field_mapper.py  kpi_normalizer.py  pipeline.py  schema_validator.py
benchlens/utils/: __init__.py  config_loader.py  db.py  logger.py
benchlens/warehouse/: __init__.py  models.py  schema.sql  seed_data.sql
config/: dq_rules.yaml  kpi_definitions.yaml  logging.yaml  settings.yaml  sources.yaml
docker/: Dockerfile  README.md
docs/: README.md  architecture.md  decisions.md
docs/screenshots/: README.md
kubernetes/: README.md
notebooks/: README.md
powerbi/: README.md
powerbi/datasets/: benchmark_model.pbids  data_model.md  dax_measures.md
powerbi/deployment/: refresh_views.ps1
powerbi/reports/: executive_summary.md  hardware_performance.md  model_comparison.md  regression_reliability.md
powerbi/themes/: benchlens_theme.json
scripts/: README.md  bootstrap_db.py  load_sample_data.py
sql/: README.md
tests/: README.md  __init__.py
tests/fixtures/: sample_results.csv  sample_results.json
tests/integration/: __init__.py  test_api.py  test_pipeline.py  (+2 more)
(+18 files in other folders)
